--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "express": "^4.19.2",
     "form-data": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
