--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
