--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
